# mflow-cpg

./: .env.example  .gitignore  README.md  agent_mcp_guide.md  config.yaml  config.yaml.example  mflow_cpg_plan_response.md  pyproject.toml  run_integration_test.py  test_kuzu_temp
docs/: cpg_evaluation_plan.md  evaluation_execution_report.md  omnicpg_plan.md  omnicpg_readme.md
openspec/: AGENTS.md  project.md
openspec/changes/: cpg_db_schema_fusion_analysis.md  data_flow_improvements_proposal.md  sota_improvement_plan.md
openspec/specs/: mflow-omnicpg-synergy.md
openspec/specs/evaluation/: evaluation_report.md
scripts/: analyze_hcs_print.py  analyze_self.py  analyze_self_local.py  run_bdd.py
src/m_flow/: __init__.py  base_config.py
src/m_flow/config/: config.py  env_registry.py  presets.py
src/m_flow/llm/: config.py
src/m_flow/retrieval/: config.py  memory_orchestrator.py
src/m_flow/shared/: config_registry.py
src/mcp_server_omnicpg/: __init__.py  config.py  errors.py  mcp.json  mcp_server.py  neo4j_adapter.py  sse_transport.py
src/mcp_server_omnicpg/tools/: __init__.py  advanced_analysis.py  agentic_tools.py  analysis_tools.py  apoc_tools.py  auto_expansion.py  basic_queries.py  code_intelligence.py  (+4 more)
src/mflow_cpg/: __init__.py  chunker.py  config.py  graph_rag.py  linker.py  mcp_server.py  retriever.py  semantic_engine.py
src/mflow_cpg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/omnicpg/: __init__.py
tests/mflow_cpg/: __init__.py  test_chunker.py  test_graph_rag.py  test_integration.py  test_orchestrator.py
tests/omnicpg/: conftest.py  verify_java_streaming.py  verify_java_taint.py  verify_mcp_taint.py
(+167 files in other folders)
