[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mflow-cpg"
version = "0.1.0"
description = "Unified Code Memory & Property Graph Engine (M-Flow × OmniCPG)"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = [
    # Core general dependencies
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "PyYAML>=6.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.0",
    "tenacity>=8.0",
    
    # M-Flow memory & API dependencies
    "litellm>=1.0",
    "openai>=1.0",
    "instructor>=1.0",
    "lancedb>=0.10",
    "numpy>=1.20",
    "pypdf>=4.0",
    "aiohttp>=3.9",
    "aiolimiter>=1.1",
    "aiosqlite>=0.20",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "diskcache>=5.6",
    "fastapi>=0.100",
    "fastapi-users>=12.0",
    "filetype>=1.2",
    "limits>=3.0",
    
    # OmniCPG static analysis dependencies
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-java>=0.23.0",
    "networkx>=3.0",
    "neo4j>=5.0",
    
    # MCP server dependencies
    "mcp>=0.1.0",
    "starlette>=0.27.0",
    "uvicorn>=0.23.0",
    "websockets>=12.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
]

[project.entry-points."omnicpg.plugins"]
python = "omnicpg.plugins.python_plugin.plugin:PythonPlugin"
java = "omnicpg.plugins.java_plugin.plugin:JavaPlugin"

[project.scripts]
mflow-cpg-mcp = "mflow_cpg.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]
